// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quadtile add 1`] = `
Object {
  "nw": Object {
    "se": Object {
      "value": "C",
    },
    "value": "B",
  },
  "value": "A",
}
`;

exports[`quadtile find 1`] = `
Object {
  "dist": 0.8408964152537146,
  "value": "B",
}
`;

exports[`quadtile find multi 1`] = `
Object {
  "dist": 6708203932.49937,
}
`;

exports[`quadtile find out of range 1`] = `
Object {
  "dist": 0.8467453123625271,
  "value": "B",
}
`;

exports[`quadtile find root 1`] = `
Object {
  "dist": 0.8467453123625271,
  "value": "B",
}
`;
